tests/samples/negative/types/field_invalid_storage.ax
module field_invalid_storage;

struct Bad {
    value: void;
}

fn main() -> i32 {
    return 0;
}
